fix(topbar): change z-index

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -6,6 +6,7 @@
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 999;
 }
 
 .topbarLeft{
